<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ThirdFragment">

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sampleNumStarsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <Button
            android:id="@+id/sampleRestartButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/restartButton_text"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/sampleStarButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            android:clickable="false"
            android:contentDescription="@string/starButton_description"
            android:src="@android:drawable/btn_star_big_off"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sampleCatGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearlayout2" />

    <Button
        android:id="@+id/returnToMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginBottom="50dp"
        android:text="@string/NextButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tutorialText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/purple_200"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/returnToMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sampleCatGrid" />


</androidx.constraintlayout.widget.ConstraintLayout>